fix spacing of loading icon

--- a/frontend/src/components/Loading/Loading.module.css
+++ b/frontend/src/components/Loading/Loading.module.css
@@ -1,6 +1,6 @@
 
 .container {
-    margin-top: 2em;
+    margin: 2em 0;
     height: 4em;
     position: relative;
 }
